# NewEngine

./: .gitignore
neocore2/: Cargo.toml  config.json
neocore2/app/: Cargo.toml
neocore2/app/src/: main.rs
neocore2/apps/editor/: Cargo.toml
neocore2/apps/editor/src/: main.rs  render_controller.rs  ui.rs
neocore2/assets/text/: test.json
neocore2/assets/ui/: editor.ui.xml  editor.xml
neocore2/crates/newengine-AssetManager/src/: lib.rs  store.rs  text_reader.rs  types.rs
neocore2/crates/newengine-assets/src/: store.rs
neocore2/crates/newengine-audio-api/src/: ambience.rs  audio_api.rs  environment.rs  ids.rs  lib.rs  mixer.rs  music.rs  occlusion.rs  system.rs  types.rs  vehicle.rs  voice.rs
neocore2/crates/newengine-camera/src/: controller.rs  lib.rs  projection.rs  rig.rs  state.rs  types.rs
neocore2/crates/newengine-core/: Cargo.toml
neocore2/crates/newengine-core/src/: assets.rs  assets_service.rs  bus.rs  engine.rs  error.rs  events.rs  frame.rs  host_events.rs  host_services.rs  lib.rs  mod.rs  plugins.rs
neocore2/crates/newengine-core/src/console/: mod.rs  runtime.rs
neocore2/crates/newengine-core/src/module/: bus.rs  ctx.rs  mod.rs  module.rs  resources.rs  services.rs
neocore2/crates/newengine-core/src/plugins/: host_api.rs  host_context.rs  manager.rs  mod.rs
neocore2/crates/newengine-core/src/render/: mod.rs
neocore2/crates/newengine-core/src/sched/: mod.rs  sched.rs  scheduler.rs
neocore2/crates/newengine-core/src/startup/: config.rs  error.rs  loader.rs  mod.rs
neocore2/crates/newengine-core/src/sync/: mod.rs  shutdown.rs  sync.rs
neocore2/crates/newengine-import-3d/: Cargo.toml
neocore2/crates/newengine-import-3d/src/: module.rs  plugin.rs
neocore2/crates/newengine-import-3d/src/providers/: fbx.rs  gltf.rs  mod.rs  obj.rs
neocore2/crates/newengine-import-audio/src/providers/: mod.rs
neocore2/crates/newengine-import-dds/: Cargo.toml  build.rs
neocore2/crates/newengine-import-dds/src/: lib.rs  module.rs  plugins.rs
neocore2/crates/newengine-import-png/: Cargo.toml
neocore2/crates/newengine-import-png/src/: module.rs  plugin.rs
neocore2/crates/newengine-import-text/: Cargo.toml  build.rs
neocore2/crates/newengine-import-text/src/: module.rs
neocore2/crates/newengine-modules-cef/: Cargo.toml
neocore2/crates/newengine-modules-cef/src/: api.rs  lib.rs  runtime.rs
neocore2/crates/newengine-modules-input/: Cargo.toml  build.rs
neocore2/crates/newengine-modules-input/src/: api.rs  lib.rs  module.rs  plugins.rs
neocore2/crates/newengine-modules-render-vulkan-ash/: Cargo.toml
neocore2/crates/newengine-modules-render-vulkan-ash/shaders/: ui.vert
neocore2/crates/newengine-modules-render-vulkan-ash/src/: lib.rs  render_api.rs  vulkan.rs
neocore2/crates/newengine-modules-render-vulkan-ash/src/vulkan/: mod.rs  renderer.rs  resources.rs  swapchain.rs  ui.rs  util.rs
neocore2/crates/newengine-modules-render-vulkan-ash/src/vulkan/renderer/: api.rs  draw.rs  drop_impl.rs  frame.rs  init.rs  mod.rs  state.rs  types.rs
neocore2/crates/newengine-modules-render-vulkan-ash/src/vulkan/ui/: mod.rs  overlay.rs
neocore2/crates/newengine-modules-window-winit/: Cargo.toml
neocore2/crates/newengine-modules-window-winit/src/: lib.rs
neocore2/crates/newengine-platform-winit/: Cargo.toml
neocore2/crates/newengine-platform-winit/src/: app.rs  events.rs  lib.rs
neocore2/crates/newengine-platform-winit/src/app/: input_bridge.rs
neocore2/crates/newengine-plugin-api/src/: lib.rs
neocore2/crates/newengine-ui/: Cargo.toml
neocore2/crates/newengine-ui/src/: draw.rs  lib.rs  markup.rs  texture.rs
neocore2/crates/newengine-ui/src/egui_provider/: mod.rs  translate.rs  winit_input.rs
neocore2/crates/newengine-ui/src/providers/: egui.rs
neocore2/engine_core/: Cargo.toml
neocore2/engine_core/src/: commands.rs  config.rs  engine.rs  error.rs  frame.rs  lib.rs  log.rs  logsys.rs  module.rs  phase.rs  schedule.rs  services.rs  signals.rs  telemetry.rs  time.rs
