[package]
name = "geometryImporter"
version = "0.1.0"
edition = "2021"
description = "NewEngine extensible 3D asset importer plugin (.obj/.fbx/.glb/.gltf)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }

inventory = "0.3"

# Providers
# OBJ
tobj = { version = "4", default-features = false }
# glTF (glb/gltf)
gltf = { version = "1", default-features = false, features = ["import"] }

serde_json = "1"

[build-dependencies]
embed-resource = "2"
