[package]
name = "newengine-platform-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
newengine-core = { path = "../newengine-core" }
# UI deps are optional and enabled via feature "egui"
egui = { version = "0.29", optional = true }
newengine-ui = { path = "../newengine-ui", optional = true, default-features = false, features = ["egui", "winit"] }
raw-window-handle = "0.6.2"
log = "0.4.29"

[features]
default = []
egui = ["dep:egui", "dep:newengine-ui", "newengine-ui/egui"]