[package]
name = "newengine-platform-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
newengine-core = { path = "../newengine-core" }
newengine-ui = { path = "../newengine-ui", optional = true, features = ["egui"] }
egui = { version = "0.33.3" }
raw-window-handle = "0.6.2"
log = "0.4.29"

[features]
default = []
egui = ["dep:newengine-ui"]