[package]
name = "newengine-ui"
version = "0.1.0"
edition = "2021"
description = "NewEngine UI core: backend-agnostic draw lists + egui provider"

[features]
default = ["winit", "egui"]
egui = ["dep:egui", "dep:egui-winit"]
winit = ["dep:winit"]

[dependencies]
# Core utils
ahash = "0.8"
smallvec = "1.13"
bytemuck = { version = "1.15", features = ["derive"] }

# Optional: egui provider + winit input bridge
egui = { version = "0.28", optional = true }
egui-winit = { version = "0.28", optional = true }
winit = { version = "0.29", optional = true, default-features = false, features = ["rwh_05"] }